// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`navigation story > 001 initial state 1`] = `
<div>
  <h1>
    Terrific company website
  </h1>
  <a
    tabindex="0"
  >
    About
  </a>
  <a
    tabindex="0"
  >
    Contact
  </a>
  <a
    tabindex="0"
  >
    Values
  </a>
  <a
    tabindex="0"
  >
    Product Categories
  </a>
  5
</div>
`;

exports[`navigation story > 002 about page 1`] = `
<div>
  <h1>
    Terrific company website
  </h1>
  <a
    tabindex="0"
  >
    About
  </a>
  <a
    tabindex="0"
  >
    Contact
  </a>
  <a
    tabindex="0"
  >
    Values
  </a>
  <a
    tabindex="0"
  >
    Product Categories
  </a>
  5
  <div
    class="about"
    data-testid="about-page"
  >
    <h2>
      About
    </h2>
    <p>
      Learn more about our
    </p>
    <ul>
      <li>
        <a
          tabindex="0"
        >
          Values
        </a>
      </li>
      <li>
        <a
          tabindex="0"
        >
          Team
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`navigation story > 003 values page 1`] = `
<div>
  <h1>
    Terrific company website
  </h1>
  <a
    tabindex="0"
  >
    About
  </a>
  <a
    tabindex="0"
  >
    Contact
  </a>
  <a
    tabindex="0"
  >
    Values
  </a>
  <a
    tabindex="0"
  >
    Product Categories
  </a>
  5
  <div
    class="about"
    data-testid="about-page"
  >
    <h2>
      About
    </h2>
    <p>
      Learn more about our
    </p>
    <ul>
      <li>
        <a
          tabindex="0"
        >
          Values
        </a>
      </li>
      <li>
        <a
          tabindex="0"
        >
          Team
        </a>
      </li>
    </ul>
    <div
      data-testid="values-page"
    >
      <h2>
        Values
      </h2>
      Our values are important to our
       
      <a
        tabindex="0"
      >
        team
      </a>
      and you can
      <a
        tabindex="0"
      >
        contact us
      </a>
      about them.
    </div>
  </div>
</div>
`;

exports[`navigation story > 004 team page 1`] = `
<div>
  <h1>
    Terrific company website
  </h1>
  <a
    tabindex="0"
  >
    About
  </a>
  <a
    tabindex="0"
  >
    Contact
  </a>
  <a
    tabindex="0"
  >
    Values
  </a>
  <a
    tabindex="0"
  >
    Product Categories
  </a>
  5
  <div
    class="about"
    data-testid="about-page"
  >
    <h2>
      About
    </h2>
    <p>
      Learn more about our
    </p>
    <ul>
      <li>
        <a
          tabindex="0"
        >
          Values
        </a>
      </li>
      <li>
        <a
          tabindex="0"
        >
          Team
        </a>
      </li>
    </ul>
    <div
      data-testid="team-page"
    >
      <h2>
        Team
      </h2>
      Our team is great
      <a
        tabindex="0"
      >
        Alice
      </a>
      <a
        tabindex="0"
      >
        Bob
      </a>
      <a
        tabindex="0"
      >
        Carla
      </a>
      <a
        tabindex="0"
      >
        Home
      </a>
    </div>
  </div>
</div>
`;

exports[`navigation story > 005 alice page 1`] = `
<div>
  <h1>
    Terrific company website
  </h1>
  <a
    tabindex="0"
  >
    About
  </a>
  <a
    tabindex="0"
  >
    Contact
  </a>
  <a
    tabindex="0"
  >
    Values
  </a>
  <a
    tabindex="0"
  >
    Product Categories
  </a>
  5
  <div
    class="about"
    data-testid="about-page"
  >
    <h2>
      About
    </h2>
    <p>
      Learn more about our
    </p>
    <ul>
      <li>
        <a
          tabindex="0"
        >
          Values
        </a>
      </li>
      <li>
        <a
          tabindex="0"
        >
          Team
        </a>
      </li>
    </ul>
    <div
      data-testid="team-page"
    >
      <h2>
        Team
      </h2>
      Our team is great
      <a
        tabindex="0"
      >
        Alice
      </a>
      <a
        tabindex="0"
      >
        Bob
      </a>
      <a
        tabindex="0"
      >
        Carla
      </a>
      <a
        tabindex="0"
      >
        Home
      </a>
    </div>
    <div>
      <h2>
        Alice
         is a member of our team
      </h2>
      <a
        tabindex="0"
      >
        back to team
      </a>
    </div>
  </div>
</div>
`;

exports[`navigation story > 006 home page 1`] = `
<div>
  <h1>
    Terrific company website
  </h1>
  <a
    tabindex="0"
  >
    About
  </a>
  <a
    tabindex="0"
  >
    Contact
  </a>
  <a
    tabindex="0"
  >
    Values
  </a>
  <a
    tabindex="0"
  >
    Product Categories
  </a>
  5
</div>
`;

exports[`navigation story > 007 contact page 1`] = `
<div>
  <h1>
    Terrific company website
  </h1>
  <a
    tabindex="0"
  >
    About
  </a>
  <a
    tabindex="0"
  >
    Contact
  </a>
  <a
    tabindex="0"
  >
    Values
  </a>
  <a
    tabindex="0"
  >
    Product Categories
  </a>
  5
  <div
    data-testid="contact-page"
  >
    <h2>
      Contact us
    </h2>
    <a
      tabindex="0"
    >
      Email us
    </a>
    <a
      tabindex="0"
    >
      Phone us
    </a>
    <a
      tabindex="0"
    >
      Social media
    </a>
  </div>
</div>
`;
